--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,11 @@ body {
 /* header */
 header {
     background-color: white;
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    box-shadow: 0 2px 4px #3a3a3a;
 }
 
 h1 {
