--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,8 +30,27 @@ header {
     box-shadow: 0 2px 4px #3a3a3a;
 }
 
+header a {
+    text-decoration: none;
+    color: inherit;
+}
+
 h1 {
     font-family: "Courgette", sans-serif;
+}
+
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+    list-style: none;
+}
+
+#menu > li {
+    margin-bottom: 1em;
+}
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
 }
 
 /* main */
