--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,10 +24,13 @@ body {
 header {
     background-color: white;
     padding: 0 1rem;
-    position: fixed;
+    position: sticky;
     z-index: 99;
     width: 100%;
     box-shadow: 0 2px 4px #3a3a3a;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 header a {
@@ -51,6 +54,31 @@ h1 {
 
 .active {
     border-bottom: 1px solid #3a3a3a;
+}
+
+/* navbar styles for toggle */
+nav {
+    position: absolute;
+    background-color: #ffffff;
+    width: 100%;
+    left: 0;
+    padding: 0 1rem;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: none;
+    top: 100%;
+}
+
+/* nav-toggle */
+#nav-toggle:checked~nav {
+    display: block;
+}
+#nav-toggle {
+    display: none;
+
+}
+
+.nav-toggle-label {
+    font-size: 2 rem;
 }
 
 /* main */
