--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,10 +39,18 @@ header a {
 
 h1 {
     font-family: "Poppins", sans-serif;
+    text-align: center;
 }
+
 
 em {
     font-family: "Courgette", sans-serif;
+}
+
+p {
+    color: white;
+    padding: 20px;
+    text-align: center;
 }
 
 #menu {
@@ -87,7 +95,7 @@ nav {
 
 /* main */
 main {
-    background-color: #589dd9;
+    background-color: #d99007;
     /* take up surplus space and push footer down*/
     flex: 1 0 auto;
 }
@@ -95,12 +103,13 @@ main {
 
 /* hero image */
 #hero {
-    height: 800px;
+    height: 700px;
     min-width: 100%;
     background: url(../images/new-hero.jpeg) no-repeat center center/cover;
 }
 
-#intro > h1 {
+
+#intro>h1 {
     color: white;
     font-size: 80px;
     padding-left: 5px;
