--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
     display: flex;
     flex-direction: column;
     /* generic styles */
-    color: #3a3a3a;
+    color: white;
     font-family: "Poppins", sans-serif;
 
 }
@@ -42,6 +42,11 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    font-family: "Poppins", sans-serif;
+    text-align: center;
+    color: white;
+}
 
 em {
     font-family: "Courgette", sans-serif;
@@ -108,6 +113,13 @@ main {
     background: url(../images/new-hero.jpeg) no-repeat center center/cover;
 }
 
+#hero h1 {
+    color: white;
+    text-align: center;
+    font-size: 50px;
+    margin-top: 50px;
+    padding-top: 50px;
+}
 
 #intro>h1 {
     color: white;
