--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ em {
 }
 
 p {
-    color: white;
+    color: #3a3a3a;
     padding: 20px;
     text-align: center;
 }
@@ -105,6 +105,25 @@ main {
     flex: 1 0 auto;
 }
 
+#welcome-message {
+    background-color: white;
+    color: #3a3a3a;
+    text-align: center;
+    padding: 10px;
+}
+
+/* container styling */
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+ .card img {
+    max-width: 80%;
+    max-height: 50%;
+    align-self: center;
+ } 
 
 /* hero image */
 #hero {
@@ -127,8 +146,11 @@ main {
     padding-left: 5px;
 }
 
+/* storyline section styling */
+
+
 /* multiple choice game */
-  
+
 
 /* footer */
 footer {
