--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,8 +120,8 @@ main {
   }
 
  .card img {
-    max-width: 80%;
-    max-height: 50%;
+    max-width: 610px;
+    max-height: 810px;
     align-self: center;
  } 
 
