--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,53 +150,28 @@ main {
 
 
 /* multiple choice game */
-.question{
-    font-size: 30px;
-    margin-bottom: 10px;
-  }
-  .answers {
+
+#quiz {
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 30px;
+    background-color: #589dd9;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(198, 222, 60, 0.2);
+
+}
+
+#question {
     margin-bottom: 20px;
-    text-align: left;
-    display: inline-block;
-  }
-  .answers label{
-    display: block;
-    margin-bottom: 10px;
-  }
-  button{
-    font-family: 'Work Sans', sans-serif;
-    font-size: 22px;
-    background-color: #279;
-    color: #fff;
-    border: 0px;
-    border-radius: 3px;
-    padding: 20px;
-    cursor: pointer;
-    margin-bottom: 20px;
-  }
-  
-  button:hover{
-    background-color: #38a;
-  }
-  
-  .slide{
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    z-index: 1;
-    opacity: 0;
-    transition: opacity 0.5s;
-  }
-  .active-slide{
-    opacity: 1;
-    z-index: 2;
-  }
-  .quiz-container{
-    position: relative;
-    height: 200px;
-    margin-top: 40px;
-  }
+}
+
+#options {
+    display: grid;
+    gap: 10px;
+    padding-bottom: 5px;
+    grid-template-columns: repeat(2 1fr);
+}
+
 
 /* footer */
 footer {
