add button for celebrate and styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,6 +172,20 @@ main {
     grid-template-columns: repeat(2 1fr);
 }
 
+/* confetti styling*/
+.con-container {
+    height: 200px;
+    position: relative;
+    
+  }
+  
+.vertical-center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
 
 /* footer */
 footer {
