--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,27 +170,7 @@ main {
     padding-left: 5px;
 }
 
-/* hero maths */
-#hero-math {
-    height: 700px;
-    min-width: 100%;
-    background: url(../images/math-hero.png) no-repeat center center/cover;
-    
-}
-
-
-#hero-math h1 {
-    background-color: rgba(217, 144, 7, .7); 
-    color: white;
-    font-family: "Courgette", sans-serif;
-    text-align: center;
-    font-size: 50px;
-    margin-top: 20px;
-    padding-top: 50px;
-}
-
 /* storyline section quiz*/
-
 .quiz-section {
     margin-bottom: 30px;
     padding: 20px;
@@ -254,6 +234,203 @@ main {
 
 }
 
+/* math page styling */
+
+/* hero maths */
+#hero-math {
+    height: 700px;
+    min-width: 100%;
+    background: url(../images/math-hero.png) no-repeat center center/cover;
+    
+}
+
+#hero-math h1 {
+    background-color: rgba(217, 144, 7, .7); 
+    color: white;
+    font-family: "Courgette", sans-serif;
+    text-align: center;
+    font-size: 50px;
+    margin-top: 20px;
+    padding-top: 50px;
+}
+
+/* math page game styling */
+
+.math-container {
+    background-color: #589dd9;
+    font-family: "Poppins", sans-serif;
+    color: #3a3a3a;
+    text-align: center;
+}
+
+/* heading */
+
+.math-heading {
+    color: white;
+    text-align: center;
+    font-size: 2.5rem;
+}
+
+.math-logo {
+    height: 40px;
+    padding-right: 5px;
+}
+
+/* game layout */
+
+.game-area {
+    background-color: #ffffff;
+    box-sizing: border-box;
+    width: 85%;
+    height: 65vh;
+    max-height: 450px;
+    max-width: 830px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1%;
+}
+
+.question-area {
+    width: 50%;
+    font-size: 2rem;
+    margin: auto;
+    padding: 50px 0;
+}
+
+.question-area span {
+    padding: 0 15px;
+}
+
+.score-area {
+    margin: 5px auto;
+    width: 60%;
+    font-size: 1.2rem;
+}
+
+.controls-area {
+    width: 85%;
+    margin: 30px auto;
+}
+
+#score {
+    color: green;
+    font-weight: bold;
+}
+
+#incorrect {
+    color: red;
+    font-weight: bold;
+}
+
+.answer-message {
+    display: none;
+    font-size: 1rem;
+}
+
+#answer-box {
+    border: none;
+    color: #445361;
+    display: inline-block;
+    height: 40px;
+    width: 80px;
+    font-size: 1.2rem;
+}
+
+.scores {
+    display: inline-block;
+    padding: 25px;
+}
+
+/* buttons */
+
+.btn {
+    width: 220px;
+    height: 60px;
+    font-family: "Poppins", sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1.2px;
+    color: #3a3a3a;
+}
+
+.btn:focus {
+    outline: none;
+}
+
+.btn-lg {
+    padding-top: 10px;
+    border-radius: 50%;
+    background-color: white;
+    border: 10px solid;
+    width: 100px;
+    height: 100px;
+    font-size: 3.2rem;
+    margin: 0 30px;
+    transition: all 0.5s;
+}
+
+.btn-lg::after {
+    content: attr(data-type);
+    font-size: 1rem;
+    color: white;
+    position: relative;
+    left: -0.5em;
+}
+
+.btn-primary {
+    border-color: blue;
+    color: blue;
+}
+
+.btn-primary:active,
+.btn-primary:hover {
+    background-color: darkblue;
+    color: darkblue;
+}
+
+.btn-warning {
+    border-color: orange;
+    color: orange;
+}
+
+.btn-warning:active,
+.btn-warning:hover {
+    background-color: darkorange;
+    color: darkorange;
+}
+
+.btn-danger {
+    border-color: red;
+    color: red;
+}
+
+.btn-danger:active,
+.btn-danger:hover {
+    background-color: darkred;
+    color: darkred;
+}
+
+.btn-success {
+    border-color: green;
+    color: green;
+}
+
+.btn-success:active,
+.btn-success:hover {
+    background-color: darkgreen;
+    color: darkgreen;
+}
+
+.btn-secondary {
+    margin-top: 25px;
+    background-color: #445361;
+    border: 1px transparent;
+    border-radius: 20px;
+}
+
+.btn-secondary:active,
+.btn-secondary:hover {
+    background-color: #0d1013;
+}
 
 
 /* footer */
@@ -277,6 +454,83 @@ footer {
     font-size: 160%;
     padding: 5%;
     color: #3a3a3a;
+}
+
+/* media queries for math page*/
+
+/* media query for math page: mobile screens max 320px (320px) */
+@media (max-width: 320px) {
+    .game-area {
+        height: 80vh;
+    }
+
+    .controls-area {
+        width: 50%;
+        margin: 10px auto;
+    }
+
+    .btn-lg {
+        margin: 10px 10px;
+    }
+    .question-area {
+        padding: 10px 0;
+    }
+
+}
+/* media query for math page: mobile screens max 414px (px) */
+@media (max-width: 414px) {
+    .controls-area {
+        width: 100%;
+    }
+
+    .btn-lg {
+        margin: 0 10px;
+        padding: 5px;
+        border: 5px solid;
+        width: 50px;
+        height: 50px;
+        font-size: 1.5rem;
+    }
+
+    .btn-lg::after {
+        font-size: 0.6rem;
+        left: -0.7rem;
+    }
+
+    .question-area {
+        padding: 10% 0;
+        width: 100%;
+    }
+
+    .question-area span {
+        padding: 0;
+    }
+
+    .answer-message {
+        display: block;
+    }
+
+    #answer-box {
+        display: block;
+        margin: 0 auto;
+    }
+    .btn-secondary {
+        margin-top: 0;
+    }
+
+    .score-area {
+        width: 100%;
+    }
+
+    .scores {
+        margin: 0.5em auto;
+        display: block;
+        padding: 5px;
+    }
+
+    .math-heading {
+        font-size: 2rem;
+    }
 }
 
 
