--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,7 +282,7 @@ main {
     background-color: #ffffff;
     box-sizing: border-box;
     width: 85%;
-    height: 65vh;
+    min-height: fit-content;
     max-height: 450px;
     max-width: 830px;
     margin-left: auto;
@@ -364,7 +364,7 @@ main {
     width: 100px;
     height: 100px;
     font-size: 3.2rem;
-    margin: 0 30px;
+    margin: 10px 30px;
     transition: all 0.5s;
 }
 
@@ -465,12 +465,14 @@ footer {
     }
 
     .controls-area {
-        width: 50%;
-        margin: 10px auto;
+        width: 100%;
+      
+       
     }
 
     .btn-lg {
         margin: 10px 10px;
+        padding-top: 10px;
     }
     .question-area {
         padding: 10px 0;
@@ -480,12 +482,13 @@ footer {
 /* media query for math page: mobile screens max 414px (px) */
 @media (max-width: 414px) {
     .controls-area {
-        width: 100%;
+        width: 80%;
+
     }
 
     .btn-lg {
         margin: 0 10px;
-        padding: 5px;
+        padding: 10px;
         border: 5px solid;
         width: 50px;
         height: 50px;
