--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,7 +287,7 @@ main {
 /* game layout */
 
 .game-area {
-    background-color: #ffffff;
+    background-color: lightgrey;
     box-sizing: border-box;
     width: 85%;
     min-height: fit-content;
@@ -303,6 +303,7 @@ main {
     font-size: 2rem;
     margin: auto;
     padding: 50px 0;
+    background-color:  lightgrey;
 }
 
 .question-area span {
