--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,12 +111,7 @@ main {
     flex: 1 0 auto;
 }
 
-#welcome-message {
-    background-color: white;
-    color: #3a3a3a;
-    text-align: center;
-    padding: 10px;
-}
+
 
 /* container styling */
 .container {
@@ -151,15 +146,16 @@ main {
 
 /* styling link to pages */
 
-#homepage-card {
+.homepage-card {
     background-color: #589dd9;
     color: white;
     padding: 0;
     margin-top: 5px;
+    border-radius: 0 0 0 25px;
 
 }
 
-#link-pages {
+.link-pages {
     max-width: fit-content;
     max-height: fit-content;
     margin-bottom: 15px;
