remove math page, math js and css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,7 +338,7 @@ main {
     --hue: var(--hue-wrong);
   }
   
-  .container {
+  .quiz-container {
     width: 800px;
     max-width: 80%;
     background-color: white;
