work on flip game on bubble page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -285,17 +285,26 @@ main {
     padding-top: 50px;
 }
 
+
+/* flip game */
+
+#cardbody {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 50vh;
+    background-color: #6563ff;
+}
 .cardcontainer {
     align-content: center;
 }
 
 .wrapper{
-    padding: 25px;
-    border-radius: 10px;
+    border-radius: 4px;
     background: #F8F8F8;
     box-shadow: 0 10px 30px rgba(0,0,0,0.1);
   }
-  .cards, .card, .view{
+  .cards, .flipcard, .view{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -305,8 +314,10 @@ main {
     width: 400px;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin: 0;
+    padding: 2px;
   }
-  .cards .card{
+  .cards .flipcard{
     cursor: pointer;
     list-style: none;
     user-select: none;
@@ -316,7 +327,7 @@ main {
     height: calc(100% / 4 - 10px);
     width: calc(100% / 4 - 10px);
   }
-  .card.shake{
+  .flipcard.shake{
     animation: shake 0.35s ease-in-out;
   }
   @keyframes shake {
@@ -336,7 +347,7 @@ main {
       transform: translateX(8px);
     }
   }
-  .card .view{
+  .flipcard .view{
     width: 100%;
     height: 100%;
     position: absolute;
@@ -347,30 +358,30 @@ main {
     box-shadow: 0 3px 10px rgba(0,0,0,0.1);
     transition: transform 0.25s linear;
   }
-  .card .front-view img{
+  .flipcard .front-view img{
     width: 19px;
   }
-  .card .back-view img{
+  .flipcard .back-view img{
     max-width: 45px;
   }
-  .card .back-view{
+  .flipcard .back-view{
     transform: rotateY(-180deg);
   }
-  .card.flip .back-view{
+  .flipcard.flip .back-view{
     transform: rotateY(0);
   }
-  .card.flip .front-view{
+  .flipcard.flip .front-view{
     transform: rotateY(180deg);
   }
   @media screen and (max-width: 700px) {
-    .cards{
+    .flipcards{
       height: 350px;
       width: 350px;
     }
-    .card .front-view img{
+    .flipcard .front-view img{
       width: 17px;
     }
-    .card .back-view img{
+    .flipcard .back-view img{
       max-width: 40px;
     }
   }
@@ -379,10 +390,10 @@ main {
       height: 300px;
       width: 300px;
     }
-    .card .front-view img{
+    .flipcard .front-view img{
       width: 15px;
     }
-    .card .back-view img{
+    .flipcard .back-view img{
       max-width: 35px;
     }
   }
