--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,8 +311,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 7px;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+    
 }
 
 .cards {
@@ -335,8 +334,14 @@ main {
 .cards .card-game .view {
     width: 100%;
     height: 100%;
+    user-select: none;
+    pointer-events: none;
     position: absolute;
     background-color: white;
+    border-radius: 7px;
+    backface-visibility: hidden;
+    transition: transform 0.25s linear;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
 
 }
 
