--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,7 +311,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
 }
 
 .cards {
@@ -329,6 +329,40 @@ main {
     transform-style: preserve-3d;
     height: calc(100% / 4 - 10px);
     width: calc(100% / 4 - 10px);
+}
+
+.card-game.shake {
+    animation: shake 0.35s ease-in-out;
+}
+
+@keyframes shake {
+
+    0%,
+    100% {
+        transform: translateX(0);
+    }
+
+    20%,
+    100% {
+        transform: translateX(-13px);
+    }
+
+
+    40%,
+    100% {
+        transform: translateX(13px);
+    }
+
+    60%,
+    100% {
+        transform: translateX(-8px);
+    }
+
+    80%,
+    100% {
+        transform: translateX(8px);
+
+    }
 }
 
 .cards .card-game .view {
@@ -351,16 +385,21 @@ main {
 }
 
 .card-game .back-view {
-   transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
 }
 
 .card-game .back-view img {
     max-width: 45px;
 }
 
-.card-game:hover .back-view{
-transform: rotateY(0);
+.card-game.flip .front-view {
+    transform: rotateY(180deg);
 }
+
+.card-game.flip .back-view {
+    transform: rotateY(0);
+}
+
 /* contact page styling */
 
 #hero-contact {
