--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ main {
 /* styling link to pages */
 
 .homepage-card {
-    background-color: #589dd9;
+    background-color: #2d689c;
     color: white;
     padding: 0;
     margin-top: 5px;
@@ -196,7 +196,7 @@ main {
 .quiz-section {
     padding: 10px;
     border-radius: 8px;
-    background-color: #589dd9;
+    background-color: #2d689c;
 
 }
 
