--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ main {
 }
 
 #hero2 h1 {
-    color: #3f9004;
+    color: white;
     text-align: center;
     font-size: 50px;
     margin-top: 20px;
